# kqtquickcharts

./: .gitignore  .kde-ci.yml  AUTHORS  CMakeLists.txt  COPYING  KQtQuickChartsConfig.cmake.in  README.md
demo/dynamicdata/: Chart.qml  ChartTableView.qml  TableView.qml  ValueEdit.qml  main.qml
demo/minimal/: main.qml
demo/xy/: main.qml
src/: CMakeLists.txt  barchartcore.cpp  barchartcore.h  barchartsegment.cpp  barchartsegment.h  bargraphcore.cpp  bargraphcore.h  bargraphsegment.cpp  bargraphsegment.h  chartcore.cpp  chartcore.h  chartforegroundpainter.cpp  chartforegroundpainter.h  chartmodel.cpp  chartmodel.h  chartplugin.cpp  chartplugin.h  dimension.cpp  dimension.h  graphcore.cpp  graphcore.h  graphforegroundpainter.cpp  graphforegroundpainter.h  graphplugin.cpp  graphplugin.h  linechartbackgroundpainter.cpp  linechartbackgroundpainter.h  linechartcore.cpp  linechartcore.h  linechartpainter.cpp  linechartpainter.h  linechartpoint.cpp  linechartpoint.h  linegraphbackgroundpainter.cpp  linegraphbackgroundpainter.h  linegraphcore.cpp  linegraphcore.h  linegraphpainter.cpp  linegraphpainter.h  linegraphpoint.cpp  (+13 more)
src/qml/: BarChart.qml  BarGraph.qml  Label.qml  LegendItem.qml  LineChart.qml  LineGraph.qml  LineLabel.qml  XYChart.qml  qmldir
